# fa-flask

./: .env  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
app/: __init__.py  config.py
app/api/: api.py  image.py
app/services/: recognition.py
monitoring/: prometheus.yml
