[project]
name = "fa-flask"
version = "0.1.0"
description = "Default template for Flask API project"
authors = [
    {name = "xu.pengfei", email = "1508075252@qq.com"},
]
dependencies = [
    "flask>=3.1.1",
    "flask-restx>=1.3.0",
    "pillow>=11.3.0",
    "python-dotenv>=1.1.1",
    "gunicorn>=23.0.0"
]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false

[tool.pdm.scripts]
serve = "python main.py"
prod = "gunicorn -b 0.0.0.0:5000 main:app"
